<resources>
    <string name="app_name">LeanGainGym</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exercises">Exercises</string>
    <string name="add_an_exercise">Add an exercise</string>
    <string name="floatingButtonAddExerciseText">+ Add an exercise</string>
    <string name="add_new_template">+ add new template</string>
    <string name="some_common_information_to_be_write_here">Some common information to be write here</string>
    <string name="some_information_about_templates">some_information about templates</string>
    <string name="template_name">TEMPLATE NAME</string>
    <string name="date">DATE</string>
    <string name="description">DESCRIPTION</string>
    <string name="date_template">DATE</string>
    <string name="description_template">DESCRIPTION</string>
    <string name="exercise_name_template">EXERCISE NAME</string>
    <string name="template_name_templateEdit">Template Name</string>
    <string name="template_description_templateEdit">Template description</string>
    <string name="template_date_templateEdit">template date</string>
    <string name="add_template">+ add template</string>
    <string name="edit_template">edit template</string>
    <string name="number_of_repetitions">number of repetitions</string>
    <string name="number_of_approaches">number of approaches</string>
    <string name="add_exercise">+ ADD EXERCISE</string>
    <string name="add_exercise_floating_button">+ add exercise</string>
    <string name="exercise_tuning">EXERCISE TUNING</string>
    <string name="exercise_name">Exercise name:</string>
    <string name="exercise_name_edit">Exercise name</string>
    <string name="approaches">Approaches:</string>
    <string name="number_of_approaches_edit">Number Of Approaches</string>
    <string name="repetitions">Repetitions:</string>
    <string name="number_of_repetitions_edit">Number Of Repetitions</string>
    <string name="dialog_left_button_text">ADD EXERCISE</string>
    <string name="dialog_right_button_text">CANCEL</string>
    <string name="exercises_list_is_empty">Exercises list is empty</string>
    <string name="dialog_increase_button">+</string>
    <string name="dialog_decrease_button">-</string>
    <string name="template_info">Template info</string>
</resources>