<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rectangle_rounded_grey">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftVerticalGuideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightVerticalGuideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topVerticalGuideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/exerciseDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:text="@string/exercise_tuning"
        android:textSize="@dimen/dialog_title_text_size"
        app:layout_constraintEnd_toEndOf="@id/rightVerticalGuideline"
        app:layout_constraintStart_toStartOf="@id/leftVerticalGuideline"
        app:layout_constraintTop_toTopOf="@id/topVerticalGuideline" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dialogTvExerciseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/exercise_name"
        android:textSize="@dimen/dialog_edit_text_size"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/leftVerticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/exerciseDialogTitle" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/dialogEtExerciseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:hint="@string/exercise_name_edit"
        android:textSize="@dimen/dialog_edit_text_size"
        android:textColor="@color/white"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:singleLine="true"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        app:layout_constraintBaseline_toBaselineOf="@id/dialogTvExerciseName"
        app:layout_constraintStart_toEndOf="@id/dialogTvExerciseName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dialogTvApproaches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_text_vertical_margin_standard"
        android:text="@string/approaches"
        android:textSize="@dimen/dialog_edit_text_size"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/leftVerticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/dialogTvExerciseName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dialogApproachesValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="3"
        app:layout_constraintStart_toEndOf="@id/dialogTvApproaches"
        app:layout_constraintEnd_toEndOf="@id/rightVerticalGuideline"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBaseline_toBaselineOf="@id/dialogTvApproaches"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialogIncreaseApproachesButton"
        android:layout_width="@dimen/dialog_increase_button_width"
        android:layout_height="@dimen/dialog_increase_button_height"
        android:text="@string/dialog_increase_button"
        android:textSize="@dimen/text_size_medium"
        android:layout_marginEnd="@dimen/dialog_buttons_low_margin"
        app:layout_constraintEnd_toStartOf="@id/dialogApproachesValue"
        app:layout_constraintBaseline_toBaselineOf="@id/dialogApproachesValue"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialogDecreaseApproachesButton"
        android:layout_width="@dimen/dialog_increase_button_width"
        android:layout_height="@dimen/dialog_increase_button_height"
        android:text="@string/dialog_decrease_button"
        android:textSize="@dimen/text_size_medium"
        android:layout_marginStart="@dimen/dialog_buttons_low_margin"
        app:layout_constraintStart_toEndOf="@id/dialogApproachesValue"
        app:layout_constraintBaseline_toBaselineOf="@id/dialogApproachesValue"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dialogRepetitionsValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="8"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@id/dialogApproachesValue"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBaseline_toBaselineOf="@id/dialogTvRepetitions"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialogIncreaseRepetitionsButton"
        android:layout_width="@dimen/dialog_increase_button_width"
        android:layout_height="@dimen/dialog_increase_button_height"
        android:text="@string/dialog_increase_button"
        android:textSize="@dimen/text_size_medium"
        android:layout_marginEnd="@dimen/dialog_buttons_low_margin"
        app:layout_constraintEnd_toStartOf="@id/dialogRepetitionsValue"
        app:layout_constraintBaseline_toBaselineOf="@id/dialogRepetitionsValue"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialogDecreaseRepetitionsButton"
        android:layout_width="@dimen/dialog_increase_button_width"
        android:layout_height="@dimen/dialog_increase_button_height"
        android:text="@string/dialog_decrease_button"
        android:textSize="@dimen/text_size_medium"
        android:layout_marginStart="@dimen/dialog_buttons_low_margin"
        app:layout_constraintStart_toEndOf="@id/dialogRepetitionsValue"
        app:layout_constraintBaseline_toBaselineOf="@id/dialogRepetitionsValue"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dialogTvRepetitions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_text_vertical_margin_standard"
        android:text="@string/repetitions"
        android:textSize="@dimen/dialog_edit_text_size"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/leftVerticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/dialogTvApproaches" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialogLeftButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/dialog_left_button_text"
        app:layout_constraintEnd_toStartOf="@+id/dialogRightButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialogTvRepetitions" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialogRightButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_right_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dialogLeftButton"
        app:layout_constraintTop_toTopOf="@id/dialogLeftButton" />

</androidx.constraintlayout.widget.ConstraintLayout>