<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundGrey"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_rounded">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/templateIcon"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:srcCompat="@drawable/chest_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteX="15dp"
                tools:layout_editor_absoluteY="15dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/templateName"
                android:layout_marginStart="@dimen/margin_standard"
                android:text="@string/exercise_name_template"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/templateIcon"
                app:layout_constraintTop_toTopOf="@id/templateIcon"
                android:layout_marginTop="@dimen/margin_standard"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/templateCommonDescription"
                android:layout_width="wrap_content"
                android:text="@string/description_template"
                app:layout_constraintTop_toBottomOf="@id/templateName"
                app:layout_constraintStart_toStartOf="@id/templateName"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/templateDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_template"
                app:layout_constraintTop_toBottomOf="@id/templateCommonDescription"
                app:layout_constraintStart_toStartOf="@id/templateCommonDescription"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>